# controlmyspa

./: .gitignore  LICENSE  README.md  Version2.md  __init__.py  controlmyspa.py  debug.py  example.py  noxfile.py  pyproject.toml  renovate.json  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml
tests/: test_controlmyspa.py
